# platform.core.iot.iotcon

./: .gitignore  CMakeLists.txt  Readme-provisioning-tool  iotcon.pc.in  repomd.xml
common/: CMakeLists.txt  gen.sh  ic-common.h  ic-dbus.c  ic-dbus.h  ic-dbus.xml  ic-ioty-type.c  ic-ioty-type.h  ic-ioty-types.c  ic-ioty-types.h  ic-ioty-utils.c  ic-ioty-utils.h  ic-log.h  ic-utils.c  ic-utils.h
daemon/: CMakeLists.txt  icd-cynara.c  icd-cynara.h  icd-dbus.c  icd-dbus.h  icd-ioty-ocprocess.c  icd-ioty-ocprocess.h  icd-ioty-repr.cpp  icd-ioty-repr.h  icd-ioty-type.c  icd-ioty-type.h  icd-ioty.c  icd-ioty.cpp  icd-ioty.h  icd-payload.c  icd-payload.h  icd.c  icd.h  org.tizen.iotcon.dbus.service.in  org.tizen.iotcon.service.in
doc/: iotcon_doc.h
include/: iotcon-attributes.h  iotcon-client.h  iotcon-constant.h  iotcon-errors.h  iotcon-internal.h  iotcon-list.h  iotcon-lite-resource.h  iotcon-observers.h  iotcon-options.h  iotcon-provisioning.h  iotcon-query.h  iotcon-remote-resource.h  iotcon-representation.h  iotcon-request.h  iotcon-resource-interfaces.h  iotcon-resource-types.h  iotcon-resource.h  iotcon-response.h  iotcon-server.h  iotcon-types.h  iotcon.h
lib/: CMakeLists.txt  ic-client.c  ic-client.h  ic-common.h  ic-device.c  ic-device.h  ic-handler.c  ic-handler.h  ic-ioty-rep.cpp  ic-ioty-rep.h  ic-ioty-repr.cpp  ic-ioty-repr.h  ic-ioty.cpp  ic-ioty.h  ic-log.h  ic-observation.c  ic-options.c  ic-options.h  ic-query.c  ic-query.h  ic-rep-list.c  ic-rep-list.h  ic-rep-value.c  ic-rep-value.h  ic-rep.c  ic-rep.h  ic-repr-list.c  ic-repr-list.h  ic-repr-obj.c  ic-repr-obj.h  ic-repr-value.c  ic-repr-value.h  ic-repr.c  ic-repr.h  ic-request.c  ic-request.h  ic-resource-types.c  ic-resource-types.h  ic-response.c  ic-response.h  (+90 more)
lib/include/: iotcon-attributes.h  iotcon-client.h  iotcon-constant.h  iotcon-errors.h  iotcon-internal.h  iotcon-list.h  iotcon-lite-resource.h  iotcon-notimsg.h  iotcon-observers.h  iotcon-options.h  iotcon-provisioning.h  iotcon-query.h  iotcon-remote-resource.h  iotcon-representation.h  iotcon-request.h  iotcon-resource-interfaces.h  iotcon-resource-types.h  iotcon-resource.h  iotcon-response.h  iotcon-server.h  iotcon-state.h  iotcon-struct.h  iotcon-types.h  iotcon.h
packaging/: iotcon-old.manifest  iotcon-old.service  iotcon-test-old.manifest  iotcon-test-v2.manifest  iotcon.conf.in  iotcon.manifest  iotcon.service  iotcon.spec  libiotcon.manifest
src/: ic-attributes.c  ic-attributes.h  ic-cbor.c  ic-cbor.h  ic-common.h  ic-device.c  ic-device.h  ic-ioty-convert.c  ic-ioty-convert.h  ic-ioty-converter.c  ic-ioty-converter.h  ic-ioty-ocprocess.c  ic-ioty-ocprocess.h  ic-ioty-parse.c  ic-ioty-parse.h  ic-ioty-parser.c  ic-ioty-parser.h  ic-ioty.c  ic-ioty.h  ic-list.c  ic-list.h  ic-lite-resource.c  ic-lite-resource.h  ic-log.h  ic-observation.c  ic-observation.h  ic-options.c  ic-options.h  ic-presence.c  ic-presence.h  ic-provisioning-find.c  ic-provisioning-remove.c  ic-provisioning-struct.c  ic-provisioning-struct.h  ic-provisioning.c  ic-query.c  ic-query.h  ic-remote-resource-caching.c  ic-remote-resource-crud.c  ic-remote-resource-monitoring.c  (+21 more)
test/: CMakeLists.txt  Readme  Readme-provisioning-tool  crud-test-client.c  crud-test-server.c  device-test-client.c  device-test-server.c  iotcon-test-basic-client.c  iotcon-test-basic-server.c  iotcon-test-device-client.c  iotcon-test-encap-client.c  iotcon-test-encap-server.c  iotcon-test-iface-client.c  iotcon-test-iface-server.c  iotcon-test-provisioning.c  iotcon-test-repr-client.c  iotcon-test-repr-server.c  iotcon-test-wifi.c  repr-test-client.c  repr-test-server.c  test-log.h  test.h
