CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(iotcon C)

INCLUDE(FindPkgConfig)

SET(EXTRA_CFLAGS "-Wall -Werror-implicit-function-declaration -fvisibility=hidden")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

SET(CLIENT ${PROJECT_NAME})
SET(DAEMON "${PROJECT_NAME}-daemon")

IF(NOT DEFINED DBUS_INTERFACE)
	MESSAGE("No DBUS_INTERFACE. Check build system")
	SET(DBUS_INTERFACE "org.tizen.${PROJECT_NAME}.dbus")
ENDIF(NOT DEFINED DBUS_INTERFACE)

IF(TZ_VER_3)
	ADD_DEFINITIONS("-DTZ_VER_3")
ENDIF(TZ_VER_3)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(test)
