CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(iotcon C)

INCLUDE(FindPkgConfig)
INCLUDE_DIRECTORIES(include)

SET(LIB ${PROJECT_NAME})
SET(EXTRA_CFLAGS "-Wall -Werror-implicit-function-declaration -fvisibility=hidden")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

FILE(GLOB SRCS src/*.c)

pkg_check_modules(pkgs REQUIRED glib-2.0 dlog capi-base-common gio-2.0
	capi-system-info capi-system-system-settings gio-unix-2.0 iotivity cynara-client uuid)

FOREACH(flag ${pkgs_CFLAGS_OTHER})
	IF(${flag} MATCHES "\\-D+")
		ADD_DEFINITIONS(${flag})
	ENDIF(${flag} MATCHES "\\-D+")
ENDFOREACH(flag)

INCLUDE_DIRECTORIES(${pkgs_INCLUDE_DIRS})
LINK_DIRECTORIES(${pkgs_LIBRARY_DIRS})

IF(TZ_VER_3)
	ADD_DEFINITIONS("-DTZ_VER_3")
ENDIF(TZ_VER_3)

ADD_LIBRARY(${LIB} SHARED ${SRCS})
TARGET_LINK_LIBRARIES(${LIB} ${pkgs_LIBRARIES} pthread)
SET_TARGET_PROPERTIES(${LIB} PROPERTIES VERSION ${FULLVER} SOVERSION ${MAJORVER})
INSTALL(TARGETS ${LIB} DESTINATION ${LIB_INSTALL_DIR})

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
CONFIGURE_FILE(${LIB}.pc.in ${LIB}.pc @ONLY)
INSTALL(FILES ${LIB}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)

FILE(GLOB HEADER include/*.h)
INSTALL(FILES ${HEADER} DESTINATION ${INCLUDE_INSTALL_DIR}/${LIB})

ADD_SUBDIRECTORY(test)
