INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common/)
INCLUDE_DIRECTORIES(include)

FILE(GLOB CLIENT_SRCS *.c ${CMAKE_SOURCE_DIR}/common/*.c)

pkg_check_modules(client_pkgs REQUIRED glib-2.0 dlog capi-base-common gio-2.0
	capi-system-info capi-system-system-settings gio-unix-2.0 iotivity)

FOREACH(flag ${client_pkgs_CFLAGS_OTHER})
	IF(${flag} MATCHES "\\-D+")
		ADD_DEFINITIONS(${flag})
	ENDIF(${flag} MATCHES "\\-D+")
ENDFOREACH(flag)

INCLUDE_DIRECTORIES(${client_pkgs_INCLUDE_DIRS})
LINK_DIRECTORIES(${client_pkgs_LIBRARY_DIRS})

ADD_LIBRARY(${CLIENT} SHARED ${CLIENT_SRCS})
TARGET_LINK_LIBRARIES(${CLIENT} ${client_pkgs_LIBRARIES})
SET_TARGET_PROPERTIES(${CLIENT} PROPERTIES VERSION ${FULLVER} SOVERSION ${MAJORVER})
INSTALL(TARGETS ${CLIENT} DESTINATION ${LIB_INSTALL_DIR})

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
CONFIGURE_FILE(${CLIENT}.pc.in ${CLIENT}.pc @ONLY)
INSTALL(FILES ${CLIENT}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)

FILE(GLOB CLIENT_HEADER include/*.h)
INSTALL(FILES ${CLIENT_HEADER} DESTINATION ${INCLUDE_INSTALL_DIR}/${CLIENT})
