LINK_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

SET(IOTCON_TEST_BASIC_CLIENT "iotcon-test-basic-client")
SET(IOTCON_TEST_BASIC_SERVER "iotcon-test-basic-server")
SET(IOTCON_TEST_BASIC_CLIENT_SRCS "iotcon-test-basic-client.c")
SET(IOTCON_TEST_BASIC_SERVER_SRCS "iotcon-test-basic-server.c")

SET(IOTCON_TEST_DEVICE_CLIENT "iotcon-test-device-client")
SET(IOTCON_TEST_DEVICE_CLIENT_SRCS "iotcon-test-device-client.c")

SET(IOTCON_TEST_IFACE_CLIENT "iotcon-test-iface-client")
SET(IOTCON_TEST_IFACE_SERVER "iotcon-test-iface-server")
SET(IOTCON_TEST_IFACE_CLIENT_SRCS "iotcon-test-iface-client.c")
SET(IOTCON_TEST_IFACE_SERVER_SRCS "iotcon-test-iface-server.c")

SET(IOTCON_TEST_ENCAP_CLIENT "iotcon-test-encap-client")
SET(IOTCON_TEST_ENCAP_SERVER "iotcon-test-encap-server")
SET(IOTCON_TEST_ENCAP_CLIENT_SRCS "iotcon-test-encap-client.c")
SET(IOTCON_TEST_ENCAP_SERVER_SRCS "iotcon-test-encap-server.c")

SET(IOTCON_TEST_WIFI "iotcon-test-wifi")
SET(IOTCON_TEST_WIFI_SRCS "iotcon-test-wifi.c")

SET(IOTCON_TEST_PROVISIONING "iotcon-test-provisioning")
SET(IOTCON_TEST_PROVISIONING_SRCS "iotcon-test-provisioning.c")
SET(IOTCON_TEST_PROVISIONING_DAT "iotcon-test-svr-db.dat" "iotcon-test-svr-db-client.dat"
	"iotcon-test-svr-db-server.dat")

pkg_check_modules(test_pkgs REQUIRED dlog glib-2.0 capi-network-wifi)
INCLUDE_DIRECTORIES(${test_pkgs_INCLUDE_DIRS})
LINK_DIRECTORIES(${test_pkgs_LIBRARY_DIRS})

ADD_EXECUTABLE(${IOTCON_TEST_BASIC_CLIENT} ${IOTCON_TEST_BASIC_CLIENT_SRCS})
TARGET_LINK_LIBRARIES(${IOTCON_TEST_BASIC_CLIENT} ${test_pkgs_LIBRARIES} ${LIB})
INSTALL(TARGETS ${IOTCON_TEST_BASIC_CLIENT} DESTINATION ${BIN_INSTALL_DIR})

ADD_EXECUTABLE(${IOTCON_TEST_BASIC_SERVER} ${IOTCON_TEST_BASIC_SERVER_SRCS})
TARGET_LINK_LIBRARIES(${IOTCON_TEST_BASIC_SERVER} ${test_pkgs_LIBRARIES} ${LIB})
INSTALL(TARGETS ${IOTCON_TEST_BASIC_SERVER} DESTINATION ${BIN_INSTALL_DIR})

ADD_EXECUTABLE(${IOTCON_TEST_DEVICE_CLIENT} ${IOTCON_TEST_DEVICE_CLIENT_SRCS})
TARGET_LINK_LIBRARIES(${IOTCON_TEST_DEVICE_CLIENT} ${test_pkgs_LIBRARIES} ${LIB})
INSTALL(TARGETS ${IOTCON_TEST_DEVICE_CLIENT} DESTINATION ${BIN_INSTALL_DIR})

ADD_EXECUTABLE(${IOTCON_TEST_IFACE_CLIENT} ${IOTCON_TEST_IFACE_CLIENT_SRCS})
TARGET_LINK_LIBRARIES(${IOTCON_TEST_IFACE_CLIENT} ${test_pkgs_LIBRARIES} ${LIB})
INSTALL(TARGETS ${IOTCON_TEST_IFACE_CLIENT} DESTINATION ${BIN_INSTALL_DIR})

ADD_EXECUTABLE(${IOTCON_TEST_IFACE_SERVER} ${IOTCON_TEST_IFACE_SERVER_SRCS})
TARGET_LINK_LIBRARIES(${IOTCON_TEST_IFACE_SERVER} ${test_pkgs_LIBRARIES} ${LIB})
INSTALL(TARGETS ${IOTCON_TEST_IFACE_SERVER} DESTINATION ${BIN_INSTALL_DIR})

ADD_EXECUTABLE(${IOTCON_TEST_ENCAP_CLIENT} ${IOTCON_TEST_ENCAP_CLIENT_SRCS})
TARGET_LINK_LIBRARIES(${IOTCON_TEST_ENCAP_CLIENT} ${test_pkgs_LIBRARIES} ${LIB})
INSTALL(TARGETS ${IOTCON_TEST_ENCAP_CLIENT} DESTINATION ${BIN_INSTALL_DIR})

ADD_EXECUTABLE(${IOTCON_TEST_ENCAP_SERVER} ${IOTCON_TEST_ENCAP_SERVER_SRCS})
TARGET_LINK_LIBRARIES(${IOTCON_TEST_ENCAP_SERVER} ${test_pkgs_LIBRARIES} ${LIB})
INSTALL(TARGETS ${IOTCON_TEST_ENCAP_SERVER} DESTINATION ${BIN_INSTALL_DIR})

ADD_EXECUTABLE(${IOTCON_TEST_WIFI} ${IOTCON_TEST_WIFI_SRCS})
TARGET_LINK_LIBRARIES(${IOTCON_TEST_WIFI} ${test_pkgs_LIBRARIES} ${LIB})
INSTALL(TARGETS ${IOTCON_TEST_WIFI} DESTINATION ${BIN_INSTALL_DIR})

ADD_EXECUTABLE(${IOTCON_TEST_PROVISIONING} ${IOTCON_TEST_PROVISIONING_SRCS})
TARGET_LINK_LIBRARIES(${IOTCON_TEST_PROVISIONING} ${test_pkgs_LIBRARIES} ${LIB})
INSTALL(TARGETS ${IOTCON_TEST_PROVISIONING} DESTINATION ${BIN_INSTALL_DIR})
INSTALL(FILES ${IOTCON_TEST_PROVISIONING_DAT} DESTINATION ${BIN_INSTALL_DIR})
